<refactor>: method.invoke시 생성자를 통해 객체 생성